<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger_title">Messenger</string>
    <string name="enter_mail_hint">Enter mail:</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_button_text">Log in</string>
    <string name="register">Register</string>
    <string name="registration_title">Registration</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Last name:</string>
    <string name="age_hint">How old are you?</string>
    <string name="register_button_text">Sign up</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="reset_password_button">Reset password</string>
    <string name="log_out_menu">Log out</string>
    <string name="type_your_message">Type your message:</string>
</resources>